feat: 계정관리 페이지 및 관련 모달 컴포넌트 추가
- 새로운 계정관리 페이지를 구현하여 사용자 정보 수정 및 파일 업로드 기능 추가
- 비밀번호, 성명, 이메일, 전화번호 등 다양한 사용자 정보 수정 기능을 위한 모달 컴포넌트 추가
- 확인 및 수정 모달을 통해 사용자 경험 향상
- 전역 CSS에 계정관리 페이지 색상 변수 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,9 @@
   --color-button-disabled: #E6E6E6;
   --color-upload-border: #D9D9D9;
   --color-upload-text: #303030;
+  
+  /* 계정관리 페이지 색상 변수들 */
+  --color-success-text: #009951;
 }
 
 @theme inline {
