--- a/src/components/htmlSamples/부가세16호(을)-페이지추가.html
+++ b/src/components/htmlSamples/부가세16호(을)-페이지추가.html
@@ -197,21 +197,21 @@
 <h1 style="padding-top: 5pt;padding-left: 0pt;text-indent: 0pt;text-align: center;"><input
         class="form-input form-input-text"
         maxLength={4}
-        style="display: inline-block; width: 32pt; height: 16pt; maxlength: 4; vertical-align: middle; margin: 0 2pt;"
+        style="display: inline-block; width: 32pt; height: 16pt; maxLength: 4; vertical-align: middle; margin: 0 2pt;"
         type="text"/>년 제 <input
         class="form-input form-input-text" maxLength={2}/
- style="display: inline-block; width: 20pt; height: 16pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 16pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
         type="text">기 ( <input class="form-input form-input-text" maxLength={2}/
- style="display: inline-block; width: 20pt; height: 16pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 16pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
                                type="text">월 <input class="form-input form-input-text" maxLength={2}/
- style="display: inline-block; width: 20pt; height: 16pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 16pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
                                                     type="text">일 ~ <input class="form-input form-input-text"
                                                                            maxLength={2}/
- style="display: inline-block; width: 20pt; height: 16pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 16pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
                                                                            type="text">월 <input
         class="form-input form-input-text"
         maxLength={2}/
- style="display: inline-block; width: 20pt; height: 16pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 16pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
         type="text">일)
 </h1>
 <p style="text-indent: 0pt;text-align: left;"><br/></p>
