--- a/src/components/htmlSamples/부가세25호-페이지추가.html
+++ b/src/components/htmlSamples/부가세25호-페이지추가.html
@@ -212,21 +212,21 @@
 <h1 style="padding-left: 0pt;text-indent: 0pt;line-height: 13pt;text-align: center;"><input
         class="form-input form-input-text"
         maxLength={4}
-        style="display: inline-block; width: 32pt; height: 20pt; maxlength: 4; vertical-align: middle; margin: 0 2pt;"
+        style="display: inline-block; width: 32pt; height: 20pt; maxLength: 4; vertical-align: middle; margin: 0 2pt;"
         type="text"/>년 제 <input
         class="form-input form-input-text" maxLength={2}/
- style="display: inline-block; width: 20pt; height: 20pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 20pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
         type="text">기 ( <input class="form-input form-input-text" maxLength={2}/
- style="display: inline-block; width: 20pt; height: 20pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 20pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
                                type="text">월 <input class="form-input form-input-text" maxLength={2}/
- style="display: inline-block; width: 20pt; height: 20pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 20pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
                                                     type="text">일 ~ <input class="form-input form-input-text"
                                                                            maxLength={2}/
- style="display: inline-block; width: 20pt; height: 20pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 20pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
                                                                            type="text">월 <input
         class="form-input form-input-text"
         maxLength={2}/
- style="display: inline-block; width: 20pt; height: 20pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 20pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
         type="text">일)
 </h1>
 <p style="padding-top: 1pt;text-indent: 0pt;text-align: left;"><br/></p>
@@ -262,13 +262,13 @@
     <span style="display: inline-block;">수입금액 내용 <span class="p"
                                                        style="font-family:돋움, monospace; font-size: 11pt; font-weight: bold;">(기간 <input
             class="form-input form-input-text" maxLength={2}/
- style="display: inline-block; width: 20pt; height: 20pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 20pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
             type="text">월 ~ <input class="form-input form-input-text" maxLength={2}/
- style="display: inline-block; width: 20pt; height: 20pt; maxlength: 2; vertical-align: middle; margin: 0 2pt;"
+ style="display: inline-block; width: 20pt; height: 20pt; maxLength: 2; vertical-align: middle; margin: 0 2pt;"
                                    type="text">월)</span></span><span class="s6"
                                                                      style="position: absolute; right: 10pt; top: 2pt;">(단위: <input
-        class="form-input form-input-text" maxlength="3"
-        style="display: inline-block; width: 24pt; height: 20pt; maxlength: 3; vertical-align: middle; margin: 0 2pt;"
+        class="form-input form-input-text" maxLength="3"
+        style="display: inline-block; width: 24pt; height: 20pt; maxLength: 3; vertical-align: middle; margin: 0 2pt;"
         type="text"/>원)</span></h1>
 <p style="text-indent: 0pt;text-align: left;"><br/></p>
 <table cellspacing="0" style="border-collapse:collapse;width:880pt;margin-left:0pt;margin-top:-6pt">
